--- a/web/css/main.css
+++ b/web/css/main.css
@@ -22,6 +22,7 @@
 .comment-button {
     float: right;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
 .film-title {
@@ -35,4 +36,8 @@
 
 .audio {
     /*float: right;*/
+}
+
+.head_navigation_2 {
+    margin-bottom: 30px;
 }
