--- a/web/css/main.css
+++ b/web/css/main.css
@@ -62,6 +62,11 @@
     text-decoration: none;
 }
 
+.nav_user img {
+    border-radius: 2px;
+    margin-bottom: 5px
+}
+
 
 .nav_head ul {
     background-color: #3c3c3c;
