--- a/web/css/main.css
+++ b/web/css/main.css
@@ -32,7 +32,7 @@
 }
 
 .message_label {
-    background-color: rgba(255, 20, 29, 0.60);
+    background-color: rgba(255, 20, 29, 0.6);
 }
 
 .default-login {
@@ -51,7 +51,10 @@
     color: #777777;
 }
 
-img.head_portrait_36
+img.head_portrait_36px {
+    border-radius: 5px;
+    margin-right: 10px;
+}
 
 .information_label  {
     border-radius: 5px;
