--- a/web/css/style.css
+++ b/web/css/style.css
@@ -41,7 +41,16 @@
   .cd-top {
     height: 60px;
     width: 60px;
-    right: 30px;
+    right: 200px;
+    bottom: 30px;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .cd-top {
+    height: 60px;
+    width: 60px;
+    right: 450px;
     bottom: 30px;
   }
 }
