--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,26 @@
 #div_main {
+    padding-top: 50px;
     /*background-color: snow;*/
     /*background-color: #c6c6c6;*/
+}
+
+#nav_bg {
+    position: fixed;
+    z-index: 10;
+    background-color: rgba(41, 39, 40, 1);
+    height: 50px;
+    width: 100%;
+}
+.nav_logo_title{
+    float: left;
+    margin-right: 30px;
+}
+.nav_menu{
+    float: left;
+}
+.nav_user{
+    height: 44px;
+    float: right;
 }
 
 .main_body {
@@ -20,10 +40,11 @@
     color: #666666;
 }
 
-.nav_head {
-    background-color: #3c3c3c;
-    height: 50px;
-}
+/*.nav_head {*/
+    /*background-color: #3c3c3c;*/
+    /*background-color: rgba(16, 13, 15, 0);*/
+    /*height: 50px;*/
+/*}*/
 
 .head_message_label {
     float: right;
@@ -32,6 +53,10 @@
 }
 
 .message_label {
+    float: right;
+    position: relative;
+    bottom: 45px;
+    left: 10px;
     background-color: rgba(255, 20, 29, 0.6);
 }
 
